appId: com.axe.l.r.cinqDixQuinze
tags: 
  - pr
---
- launchApp

- runFlow: subFolder/test.yaml
- assertVisible: "Classement 🏆"
- tapOn: "Go fight ! ⚔"

- waitForAnimationToEnd
- assertVisible: "Round 1"

- stopApp